crates/oxc_linter/src/snapshots/jest_valid_describe_callback@jest-async.snap
---
source: crates/oxc_linter/src/tester.rs
---
  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
   ╭─[valid_describe_callback.tsx:1:17]
 1 │ describe('foo', async () => {})
   ·                 ──────────────
   ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
   ╭─[valid_describe_callback.tsx:1:17]
 1 │ describe('foo', async function () {})
   ·                 ────────────────────
   ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
   ╭─[valid_describe_callback.tsx:1:18]
 1 │ xdescribe('foo', async function () {})
   ·                  ────────────────────
   ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
   ╭─[valid_describe_callback.tsx:1:18]
 1 │ fdescribe('foo', async function () {})
   ·                  ────────────────────
   ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
   ╭─[valid_describe_callback.tsx:3:30]
 2 │             import { fdescribe } from '@jest/globals';
 3 │             fdescribe('foo', async function () {})
   ·                              ────────────────────
 4 │             
   ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
   ╭─[valid_describe_callback.tsx:1:22]
 1 │ describe.only('foo', async function () {})
   ·                      ────────────────────
   ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
   ╭─[valid_describe_callback.tsx:1:22]
 1 │ describe.skip('foo', async function () {})
   ·                      ────────────────────
   ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
    ╭─[valid_describe_callback.tsx:6:35]
  5 │                     });
  6 │ ╭─▶                 describe('async', async () => {
  7 │ │                       await new Promise(setImmediate);
  8 │ │                       it('breaks', () => {
  9 │ │                           throw new Error('Fail');
 10 │ │                       });
 11 │ ╰─▶                 });
 12 │                 });
    ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
    ╭─[valid_describe_callback.tsx:2:29]
  1 │     
  2 │ ╭─▶             describe('foo', async () => {
  3 │ │                   await something()
  4 │ │                   it('does something')
  5 │ │                   describe('nested', () => {
  6 │ │                       return Promise.resolve().then(() => {
  7 │ │                           it('breaks', () => {
  8 │ │                               throw new Error('Fail')
  9 │ │                           })
 10 │ │                       })
 11 │ │                   })
 12 │ ╰─▶             })
 13 │                 
    ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): Unexpected return statement in describe callback
    ╭─[valid_describe_callback.tsx:6:21]
  5 │                     describe('nested', () => {
  6 │ ╭─▶                     return Promise.resolve().then(() => {
  7 │ │                           it('breaks', () => {
  8 │ │                               throw new Error('Fail')
  9 │ │                           })
 10 │ ╰─▶                     })
 11 │                     })
    ╰────
  help: Remove return statement in your describe callback

  ⚠ eslint-plugin-jest(valid-describe-callback): No async describe callback
   ╭─[valid_describe_callback.tsx:1:17]
 1 │ describe('foo', async function (done) {})
   ·                 ────────────────────────
   ╰────
  help: Remove `async` keyword

  ⚠ eslint-plugin-jest(valid-describe-callback): Unexpected argument(s) in describe callback
   ╭─[valid_describe_callback.tsx:1:17]
 1 │ describe('foo', async function (done) {})
   ·                 ────────────────────────
   ╰────
  help: Remove argument(s) of describe callback
