crates/oxc_linter/src/snapshots/jest_valid_describe_callback@jest.snap
---
source: crates/oxc_linter/src/tester.rs
---
  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:1]
 1 │ describe.each()()
   · ─────────────────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:1]
 1 │ describe['each']()()
   · ────────────────────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:1]
 1 │ describe.each(() => {})()
   · ─────────────────────────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:25]
 1 │ describe.each(() => {})('foo')
   ·                         ─────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:17]
 1 │ describe.each()(() => {})
   ·                 ────────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:20]
 1 │ describe['each']()(() => {})
   ·                    ────────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:22]
 1 │ describe.each('foo')(() => {})
   ·                      ────────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:27]
 1 │ describe.only.each('foo')(() => {})
   ·                           ────────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:10]
 1 │ describe(() => {})
   ·          ────────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:10]
 1 │ describe('foo')
   ·          ─────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Second argument must be a function
   ╭─[valid_describe_callback.tsx:1:17]
 1 │ describe('foo', 'foo2')
   ·                 ──────
   ╰────
  help: Replace second argument with a function

  ⚠ eslint-plugin-jest(valid-describe-callback): Describe requires name and callback arguments
   ╭─[valid_describe_callback.tsx:1:1]
 1 │ describe()
   · ──────────
   ╰────
  help: Add name as first argument and callback as second argument

  ⚠ eslint-plugin-jest(valid-describe-callback): Unexpected return statement in describe callback
   ╭─[valid_describe_callback.tsx:3:17]
 2 │                 describe('foo', function () {
 3 │ ╭─▶                 return Promise.resolve().then(() => {
 4 │ │                       it('breaks', () => {
 5 │ │                           throw new Error('Fail')
 6 │ │                       })
 7 │ ╰─▶                 })
 8 │                 })
   ╰────
  help: Remove return statement in your describe callback

  ⚠ eslint-plugin-jest(valid-describe-callback): Unexpected return statement in describe callback
   ╭─[valid_describe_callback.tsx:1:23]
 1 │ describe('foo', () => test('bar', () => {})) 
   ·                       ─────────────────────
   ╰────
  help: Remove return statement in your describe callback

  ⚠ eslint-plugin-jest(valid-describe-callback): Unexpected argument(s) in describe callback
   ╭─[valid_describe_callback.tsx:1:17]
 1 │ describe('foo', done => {})
   ·                 ──────────
   ╰────
  help: Remove argument(s) of describe callback

  ⚠ eslint-plugin-jest(valid-describe-callback): Unexpected argument(s) in describe callback
   ╭─[valid_describe_callback.tsx:1:17]
 1 │ describe('foo', function (done) {})
   ·                 ──────────────────
   ╰────
  help: Remove argument(s) of describe callback

  ⚠ eslint-plugin-jest(valid-describe-callback): Unexpected argument(s) in describe callback
   ╭─[valid_describe_callback.tsx:1:17]
 1 │ describe('foo', function (one, two, three) {})
   ·                 ─────────────────────────────
   ╰────
  help: Remove argument(s) of describe callback
